# aio

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  sonar-project.properties
.aio/: meta.json
.github/workflows/: 1-lint-test.yml  3-sync-themes.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: architecture-overview.md  faq.md  image-generation-troubleshooting.md  quickstart-first-presentation.md  theme-section-10-guide.md
examples/: quick-start-5-slides.md
myproject/: slides.md
myproject/.aio/: config.yaml  meta.json
scripts/: import-awesome-designs.py
specs/001-foundation-cli-skeleton/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-core-layouts-theme-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-visual-enrichment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-svg-composites-api/: COMPLIANCE.md  data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md
src/aio/: __main__.py  _enrich.py  _log.py  _tpl.py  _utils.py  _validators.py  cli.py  exceptions.py
tests/: conftest.py
tests/fixtures/: slides_phase2.md
tests/integration/: test_build_e2e.py  test_build_enrich.py  test_build_phase2.py  test_commands_pipeline.py  test_init_pipeline.py  test_m2_chart_pipeline.py  test_serve_e2e.py  test_theme_e2e.py
tests/unit/: test_agent_commands.py  test_cli.py  (+22 more)
(+178 files in other folders)
